--- a/index.html
+++ b/index.html
@@ -1,95 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RiskySlopes 3D Map</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>RiskySlopes Map</title>
+  <link href="https://cdn.jsdelivr.net/npm/cesium@1.122.0/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+  <style>
+    /* Fullscreen Cesium Container */
+    #cesiumContainer {
+      width: 100%;
+      height: 100vh;
+    }
+    
+    /* Toolbar styles */
+    #toolbar {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background-color: white;
+      padding: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      z-index: 10;
+      box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+    }
 
-    <!-- Cesium CSS for widgets -->
-    <link href="https://cdn.jsdelivr.net/npm/cesium@1.122.0/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <style>
-        /* Basic styles for layout */
-        #cesiumContainer {
-            width: 100%;
-            height: 100vh;
-        }
-
-        #sidebar {
-            width: 250px;
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            background: #ffffff;
-            padding: 15px;
-            border-radius: 8px;
-            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
-            z-index: 10;
-        }
-
-        /* Full-width map with reduced sidebar */
-        main {
-            margin-left: 260px;
-        }
-    </style>
+    /* Logo and title */
+    .logo {
+      display: flex;
+      align-items: center;
+    }
+    .logo-img {
+      width: 30px;
+      height: 30px;
+      margin-right: 10px;
+    }
+    .nav-links button {
+      font-size: 16px;
+      padding: 5px 10px;
+      margin: 0 5px;
+      border: none;
+      border-radius: 5px;
+      color: #FFFFFF;
+      background-color: #4A90E2;
+      cursor: pointer;
+    }
+    .nav-links button:hover {
+      background-color: #357ABD;
+    }
+  </style>
 </head>
 <body>
-<header>
+  <!-- Toolbar with logo and title -->
+  <div id="toolbar">
     <div class="logo">
-        <img src="path_to_logo_image.png" alt="RiskySlopes Logo" class="logo-img"> 
-        <span>RiskySlopes</span>
+      <img src="path_to_logo_image.png" alt="RiskySlopes Logo" class="logo-img">
+      <span>RiskySlopes</span>
     </div>
-</header>
+    <div class="nav-links">
+      <button onclick="clearRoute()">Clear Route</button>
+      <button onclick="finishRoute()">Finish Route</button>
+    </div>
+  </div>
 
-<div id="sidebar">
-    <h2>Gefahr und Route</h2>
+  <!-- Cesium 3D map container -->
+  <div id="cesiumContainer"></div>
 
-    <div class="info-section">
-        <label for="tour-date">Datum:</label>
-        <input type="date" id="tour-date">
-    </div>
-    <div class="info-section">
-        <label for="tour-start-time">Startzeit:</label>
-        <input type="time" id="tour-start-time">
-    </div>
-    <div class="info-section">
-        <label for="avalanche-level">Gefahrenstufe:</label>
-        <select id="avalanche-level">
-            <option value="1">1 - Gering</option>
-            <option value="2">2 - Mäßig</option>
-            <option value="3">3 - Erheblich</option>
-            <option value="4">4 - Groß</option>
-            <option value="5">5 - Sehr Groß</option>
-        </select>
-    </div>
-    <div class="info-section">
-        <label for="wind-direction">Windrichtung:</label>
-        <select id="wind-direction">
-            <option value="N">N</option>
-            <option value="NE">NE</option>
-            <option value="E">E</option>
-            <option value="SE">SE</option>
-            <option value="S">S</option>
-            <option value="SW">SW</option>
-            <option value="W">W</option>
-            <option value="NW">NW</option>
-        </select>
-    </div>
-    <div class="info-section">
-        <input type="file" id="file-input" accept=".gpx, .geojson">
-        <button onclick="uploadRoute()">Route hochladen</button>
-    </div>
-    <div class="info-section">
-        <button onclick="toggleDrawMode()">Route einzeichnen</button>
-    </div>
-</div>
-
-<main>
-    <div id="cesiumContainer"></div>
-</main>
-
-<!-- CesiumJS library -->
-<script src="https://cdn.jsdelivr.net/npm/cesium@1.122.0/Build/Cesium/Cesium.js"></script>
-<script src="script.js"></script>
+  <!-- CesiumJS library -->
+  <script src="https://cdn.jsdelivr.net/npm/cesium@1.122.0/Build/Cesium/Cesium.js"></script>
+  <!-- Custom JavaScript file -->
+  <script src="script.js"></script>
 </body>
 </html>
