--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
     <span style="font-size: 24px; font-weight: bold;">RiskySlopes</span>
   </div>
   <div class="nav-links">
-    <a href="#theorie">Theorie</a>
-    <a href="#projekt">Über das Projekt</a>
-    <a href="#mich">Über mich</a>
+    <a href="theorie.html">Theorie</a>
+    <a href="index.html">Über das Projekt</a>
+    <a href="ueber_mich.html">Über mich</a>
   </div>
 </div>
 
