--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       width: 100%;
       height: 100%;
       font-family: Arial, sans-serif;
+      overflow: hidden;
     }
 
     /* Top toolbar */
@@ -57,13 +58,14 @@
     /* Sidebar for larger screens */
     #sidebar {
       width: 300px;
-      height: calc(100vh - 60px);
+      height: calc(100vh - 80px);
       position: fixed;
-      top: 60px;
-      left: 0;
+      top: 70px;
+      left: 20px;
       background-color: #f4f4f9;
       padding: 20px;
       box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+      overflow-y: auto;
     }
 
     /* Sidebar content */
@@ -97,9 +99,10 @@
 
     /* Fullscreen Cesium container, adjusting to account for sidebar width */
     #cesiumContainer {
-      width: calc(100% - 300px);
-      height: 100vh;
-      margin-left: 300px;
+      width: calc(100% - 340px);
+      height: calc(100vh - 80px);
+      margin-top: 70px;
+      margin-left: 320px;
     }
 
     /* Responsive styling for smaller screens */
@@ -108,15 +111,16 @@
         width: 100%;
         height: auto;
         position: relative;
-        top: 0;
         box-shadow: none;
+        top: 0;
+        left: 0;
+        margin: 0;
       }
 
       #cesiumContainer {
         width: 100%;
-        height: calc(100vh - 120px); /* Adjust height for toolbar and sidebar */
-        margin-left: 0;
-        margin-top: 120px;
+        height: calc(100vh - 160px); /* Adjust height for toolbar and sidebar */
+        margin: 0;
       }
 
       #toolbar {
@@ -210,6 +214,7 @@
   <button onclick="showRiskAreas()">Gefahrenbereiche anzeigen</button>
   <button onclick="clearRoute()">Route Löschen</button>
   <button onclick="finishRoute()">Route Einzeichnen Beenden</button>
+  <button onclick="markDangerIntersections()">Gefahren-Schnittpunkte markieren</button>
 </div>
 
 <!-- Cesium 3D map container -->
