--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +14,6 @@
       width: 100%;
       height: 100%;
       font-family: Arial, sans-serif;
-      overflow: hidden;
     }
 
     /* Top toolbar */
@@ -57,15 +57,16 @@
 
     /* Sidebar for larger screens */
     #sidebar {
-      width: 300px;
-      height: calc(100vh - 80px);
+      width: 240px; /* Reduced width */
+      height: calc(100vh - 60px);
       position: fixed;
-      top: 70px;
-      left: 20px;
+      top: 60px;
+      left: 10px; /* Added left margin for spacing */
       background-color: #f4f4f9;
-      padding: 20px;
+      padding: 15px;
       box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-      overflow-y: auto;
+      overflow-y: auto; /* For long content */
+      border-radius: 8px;
     }
 
     /* Sidebar content */
@@ -80,7 +81,7 @@
 
     select, button {
       width: 100%;
-      padding: 8px;
+      padding: 6px;
       margin-top: 5px;
       border: 1px solid #ddd;
       border-radius: 5px;
@@ -99,10 +100,12 @@
 
     /* Fullscreen Cesium container, adjusting to account for sidebar width */
     #cesiumContainer {
-      width: calc(100% - 340px);
-      height: calc(100vh - 80px);
-      margin-top: 70px;
-      margin-left: 320px;
+      width: calc(100% - 270px); /* Adjusted to account for sidebar */
+      height: calc(100vh - 60px); /* Adjusted to account for top toolbar */
+      margin-left: 260px;
+      margin-top: 60px;
+      padding: 10px;
+      border-radius: 8px;
     }
 
     /* Responsive styling for smaller screens */
@@ -111,16 +114,16 @@
         width: 100%;
         height: auto;
         position: relative;
-        box-shadow: none;
         top: 0;
-        left: 0;
-        margin: 0;
+        box-shadow: none;
+        margin-left: 0;
       }
 
       #cesiumContainer {
         width: 100%;
-        height: calc(100vh - 160px); /* Adjust height for toolbar and sidebar */
-        margin: 0;
+        height: calc(100vh - 120px); /* Adjust height for toolbar and sidebar */
+        margin-left: 0;
+        margin-top: 120px;
       }
 
       #toolbar {
@@ -136,27 +139,6 @@
         gap: 10px;
         flex-wrap: wrap;
         justify-content: center;
-      }
-    }
-
-    /* Small screen adjustments for mobile devices */
-    @media (max-width: 480px) {
-      .logo-img {
-        width: 30px;
-        height: 30px;
-      }
-
-      .nav-links a {
-        font-size: 14px;
-      }
-
-      button {
-        font-size: 14px;
-        padding: 6px;
-      }
-
-      #cesiumContainer {
-        height: calc(100vh - 200px); /* Extra space for expanded sidebar */
       }
     }
   </style>
